--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
         <img  src="img/profile-img.jpg" class="profile_img">
         <h2 class="header_name">Bradley Arnold</h2>
         <h2 class="header_dev">Student Front End Web Devloper with some backend knowalge</h2>
-        <h2 class="about_me">Little About Me:</h2>
+        <h2 class="about_me"> About Me:</h2>
         <p class="about_me ">
 
         I am a student front end  devloper  who is profecient in  HTML, CSS and JavaScript with some backend knowlage in  PHP and  SQL. I also have experience with python.
@@ -32,6 +32,6 @@
         <img class="tool_img" src="img/python.jpg">
     </div>
 
-    
+    <div></div>
 </body>
 </html>
