--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="about_me">
         <h2 class="about_header">About me:</h2>
         <p class="about_p">I am a student front end devloper with some back end knowalge </p>
-        <p clas="about">I am a studnt devolper who is preficent with HTML , CSS  and JavaScript. I also have backend knowalge with PHP and SQL. I am also preficent with Python</p>
+        <p clas="about">I am a studnt devolper who is preficent with HTML , CSS  and JavaScript. I  also  have some  backend knowalge with PHP and SQL. I am also preficent with Python</p>
     
         <p class="about_me">As a student devolper my goal is to improve my skills </p>
     </div>
@@ -43,6 +43,7 @@
         <img class="clock" src="img/js clock.jpg">
         <img class="text_game" src="img/js  text game.jpg" alt="text game">
         <img class="fight" src="img/js fighting game.jpg" alt="fighting game">
+        <img class="quote" src="img/quote genirator.jpg">
 
     </div>
     <div class="php_projects">
@@ -61,6 +62,7 @@
         <p>https://github.com/B1r2a3d4l5y/js-clock-project</p>
         <p>https://github.com/B1r2a3d4l5y/python-full-stack-terminal-blog</p>
         <p>https://github.com/B1r2a3d4l5y/price_of_chair-project</p>
+        <p>https://github.com/B1r2a3d4l5y/quote-genirator-project</p>
 
 
 
