--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img  class="profit" src="img/php profit and loss.jpg">
     </div>
     <div class="links">
-        <h2 class="header">Project Links</h2>
+        <h2 class="header">Project github code  links</h2>
         <p>https://github.com/B1r2a3d4l5y/js-fighting-game</p>
         <p>https://github.com/B1r2a3d4l5y/php-profit-and-loss</p>
         <p>https://github.com/B1r2a3d4l5y/Restraunt-Project</p>
@@ -67,6 +67,11 @@
 
 
 
+    </div>
+    <div class="hoist">
+        <h2 class="hoist_links"> Project hoisted links from github</h2>
+        <p>https://b1r2a3d4l5y.github.io/js-game/</p>
+        <p>https://b1r2a3d4l5y.github.io/quote-genirator-project/</p>
     </div>
 
 
