--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <div class="about_me">
         <h2 class="about_header">About me:</h2>
-        <p class="about_p">I am a student front end devloper with some back end knowalge </p>
-        <p clas="about">I am a studnt devolper who is preficent with HTML , CSS  and JavaScript. I  also  have some  backend knowalge with PHP and SQL. I am also preficent with Python</p>
+        <p class="about_p">I am a student frontend developer with some backend knowledge </p>
+        <p clas="about">I am a studnt developer who is proficent with HTML , CSS  and JavaScript. I  also  have some  backend knowalge with PHP and SQL. I am also proficent with Python</p>
     
         <p class="about_me">As a student devolper my goal is to improve my skills </p>
     </div>
@@ -54,24 +54,26 @@
     <div class="links">
         <h2 class="header">Project github code  links</h2>
         <p>https://github.com/B1r2a3d4l5y/js-fighting-game</p>
-        <p>https://github.com/B1r2a3d4l5y/php-profit-and-loss</p>
-        <p>https://github.com/B1r2a3d4l5y/Restraunt-Project</p>
-        <p>https://github.com/B1r2a3d4l5y/html-login-form</p>
-        <p>https://github.com/B1r2a3d4l5y/js-game</p>
-        <p>https://github.com/B1r2a3d4l5y/htm_survey_form</p>
-        <p>https://github.com/B1r2a3d4l5y/js-clock-project</p>
-        <p>https://github.com/B1r2a3d4l5y/python-full-stack-terminal-blog</p>
-        <p>https://github.com/B1r2a3d4l5y/price_of_chair-project</p>
         <p>https://github.com/B1r2a3d4l5y/quote-genirator-project</p>
+        <p>https://github.com/B1r2a3d4l5y/price_of_chair-project</p>
+        <p>https://github.com/B1r2a3d4l5y/php-calculator</p>
+        <p>https://github.com/B1r2a3d4l5y/pet-rescue-project</p>
+        <p>https://b1r2a3d4l5y.github.io/js-game/</p>
+            <p>https://github.com/B1r2a3d4l5y/php-profit-and-loss</p>
+            <p>https://github.com/B1r2a3d4l5y/html-login-form</p>
+            <p>https://github.com/B1r2a3d4l5y/php-contact-page</p>
+            <p>https://github.com/B1r2a3d4l5y/htm_survey_form</p>
 
 
 
 
     </div>
     <div class="hoist">
-        <h2 class="hoist_links"> Project hoisted links from github</h2>
-        <p>https://b1r2a3d4l5y.github.io/js-game/</p>
-        <p>https://b1r2a3d4l5y.github.io/quote-genirator-project/</p>
+        <h2 class="hoist_links"> Project hoisted links from 
+            github</h2>
+            <p>https://b1r2a3d4l5y.github.io/quote-genirator-project/</p>
+            <p>https://b1r2a3d4l5y.github.io/js-game/</p>
+       
     </div>
 
 
